Somewhat of a dump push
Classes and stats work, however, assigning skill points and classes is only possible with a command (cheats).
Buffs are unbalanced and will be changed.

Will add daggers and the like for Assassin class.
Will add gems for upgrading gear.

--- a/src/main/resources/locale/en.lang
+++ b/src/main/resources/locale/en.lang
@@ -1,2 +1,27 @@
+[playerclass]
+empty=Empty
+hunter=Hunter
+assassin=Assassin
+ranger=Ranger
+mage=Mage
+summoner=Summoner
+warlock=Warlock
+tank=Tank
+guardian=Guardian
+warrior=Warrior
+berserker=Berserker
+paladin=Paladin
+
+[itemtooltip]
+scourge_debugmana=Debug mana item
+
+[buffmodifiers]
+maxmana=<mod>% maximum mana
+daggerdamage=<mod>% dagger damage
+
 [buff]
 scourge_vitality=Vitality
+scourge_strength=Strength
+scourge_dexterity=Dexterity
+scourge_intelligence=Intelligence
+scourge_charisma=Charisma
