Completely broken push with totally unfinished code
Maybe I should work on this again some time

--- a/src/main/resources/locale/en.lang
+++ b/src/main/resources/locale/en.lang
@@ -18,6 +18,7 @@ scourge_debugmana=Debug mana item
 [buffmodifiers]
 maxmana=<mod>% maximum mana
 daggerdamage=<mod>% dagger damage
+lifesteal=<mod>% life steal
 
 [buff]
 scourge_vitality=Vitality
