Buff charisma to involve summons

--- a/src/main/resources/locale/en.lang
+++ b/src/main/resources/locale/en.lang
@@ -78,7 +78,7 @@ vitality_tip=Increases maximum health and health regeneration
 strength_tip=Increases physical and ranged damage
 dexterity_tip=Increases critical chance and damage, movement speed and attack speed
 intelligence_tip=Increases magic damage, maximum mana and mana regeneration
-charisma_tip=Decreases prices in shops
+charisma_tip=Decreases prices in shops and increase summon related stats.
 statpoints_tip=Skill points are used to level up stats and skills
 level_up=Level up
 level_down=Level down
